<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.raport_camera.MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/camera"
        android:layout_alignParentTop="true"
        android:hapticFeedbackEnabled="false"
        app:srcCompat="@android:color/darker_gray"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/camera"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="110dp"
        android:onClick="cameraOpen"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_marginEnd="72dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/gallery"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/camera"
        android:layout_toStartOf="@+id/camera"
        android:onClick="galleryOpen"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/gps"
        android:onClick="gpsOpen"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/EditTextName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gps_string"
        android:inputType="textPersonName"
        android:textAlignment="viewEnd"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/imageView"></EditText>

    <Spinner
        android:id="@+id/SpinnerFeedbackType"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:prompt="@string/feedbacktype1"
        android:entries="@array/feedbacktypelist"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_toStartOf="@+id/editText">
    </Spinner>

    <TextView
        android:id="@+id/editText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:gravity="center"
        android:inputType="none"
        android:text="סוג אירוע"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/EditTextName"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/EditTextFeedbackBody"
        android:layout_height="wrap_content"
        android:hint="@string/feedbackbody"
        android:inputType="textMultiLine"
        android:lines="4"
        android:gravity="top"
        android:layout_width="fill_parent"
        android:layout_below="@+id/ReportName"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/CheckBoxResponse">
    </EditText>

    <EditText
        android:id="@+id/ReportName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedbackName"
        android:textAlignment="viewEnd"
        android:layout_below="@+id/SpinnerFeedbackType"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_alignStart="@+id/EditTextFeedbackBody">
    </EditText>

    <CheckBox
        android:id="@+id/CheckBoxResponse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_text"
        android:layout_alignBottom="@+id/SpinnerFeedbackType"
        android:layout_alignStart="@+id/imageView"
        android:layout_toStartOf="@+id/SpinnerFeedbackType"
        android:layout_alignTop="@+id/SpinnerFeedbackType"></CheckBox>

    <TextView
        android:id="@+id/TextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:inputType="textPersonName"
        android:text="תאריך"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:layout_marginStart="22dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="18dp"
        android:onClick="onSubmit"
        android:src="@android:drawable/ic_menu_send"
        app:fabSize="normal" />

</RelativeLayout>
